# stream-kafka-starter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
src/: main.py
src/configs/: __init__.py  env.py
src/connections/: __init__.py  ckafka.py
src/models/: connection.py  meta.py
