[project]
name = "engine-stream-kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "oktapian",email = "oktapian@jkt1.ebdesk.com"}
]
readme = "README.md"
requires-python = "3.10.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "confluent-kafka (>=2.8.2,<3.0.0)"
]

[tool.poetry]
package-mode = true
packages = [{include = "src"}]

[tool.poetry.scripts]
runner = "src.main:runner"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
